--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<html manifest="game.manifest">                                           <!-- <= LINK TO MANIFEST (to cache files for offline-access= -->
+
+<DOCTYPE html>
+  
+
+<html>
+  manifest="game.manifest">                                           <!-- <= LINK TO MANIFEST (to cache files for offline-access= -->
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
