--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     but I wanted this template to be easy to use "manually" and for me it works fine
     to have a single PNG icon at 200x200. (200x200 is the minimum for facebok-sharing to use the og:image as thumbnail)
   -->
-  <title>Game Title</title>                                               <!-- <= WEBSITE TITLE -->
+  <title>marilyn</title>                                               <!-- <= WEBSITE TITLE -->
   <meta name="description" content="Game description">                    <!-- <= SITE DESCRIPTION as seen by web-search-engines -->
 
   <!-- Info as seen by sharing apps like WhatsApp or Facebook, so they can show a preview-image and description when you share the URL -->
